# calishot

./: .gitignore  README.md  pyproject.toml
calishot/: __main__.py  calistat.py  diff.py  ebooks_index.py  site_index.py
